<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/common_spacing"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            tools:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <ImageView
            android:id="@+id/videoPreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#CCFFFFFF"
            android:contentDescription="@string/description_video_preview"
            android:padding="@dimen/basement_text_spacing"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/videoPreviewGroup"
            app:layout_constraintEnd_toEndOf="@id/videoPreviewGroup"
            app:layout_constraintStart_toStartOf="@id/videoPreviewGroup"
            app:layout_constraintTop_toTopOf="@id/videoPreviewGroup"
            app:srcCompat="@drawable/youtube" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play"
            style="@style/PlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desription_play"
            app:icon="@drawable/ic_play_circle_filled_24"
            app:layout_constraintBottom_toBottomOf="@id/videoPreView"
            app:layout_constraintEnd_toEndOf="@id/videoPreView"
            app:layout_constraintStart_toStartOf="@id/videoPreView"
            app:layout_constraintTop_toTopOf="@id/videoPreView" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/videoPreviewGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/basement_text_spacing"
            android:visibility="visible"
            app:constraint_referenced_ids="videoPreView, play"
            app:layout_constraintBottom_toTopOf="@id/barrierContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, published, menu"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:text="@sample/posts.json/data/content" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="videoPreviewGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likes"
            style="@style/LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:background="@android:color/transparent"
            android:checkable="true"
            android:contentDescription="@string/description_post_likes"
            app:icon="@drawable/ic_like_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrierContent"
            tools:checked="@sample/posts.json/data/likedByMe"
            tools:layout_constraintStart_toEndOf="parent"
            tools:text="@sample/posts.json/data/likes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_post_share"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintStart_toEndOf="@id/likes"
            app:layout_constraintTop_toTopOf="@id/barrierContent"
            tools:text="@sample/posts.json/data/shared" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/views"
            style="@style/IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_post_views"
            app:icon="@drawable/ic_baseline_visibility_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrierContent"
            tools:text="@sample/posts.json/data/views" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>